cluster/core/netpol/radarr-trailers.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-radarr-trailers-egress
  namespace: radarr
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: radarr-trailers
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-home
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    - ipBlock:
        cidr: 192.168.0.77/32
    - ipBlock:
        cidr: 192.168.0.78/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr-anime
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr-remux
    ports:
    - port: 7878
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: sabnzbd
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sabnzbd
    ports:
    - port: 8888
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 443
      protocol: TCP
